# rag-medibot

./: .gitignore  README.md  main.py  pyproject.toml  sample.env
api/: main.py
api/app/: config.py  middleware.py  models.py  routes.py  startup.py
frontend/: package-lock.json
frontend/src/app/: layout.js  page.js
frontend/src/app/chat/: chat.module.css  page.js
frontend/src/app/login/: page.js
rag/: llm.py  utils.py
rag/hybrid/: embedding_store.py  hybrid_prompt.py  hybrid_retriever.py  ingestion_chunking.py  invoke_llm.py  reranker.py
rag/sql/: invoke_llm.py  sql_chain_cleanup_run.py  sql_prompt.py
