[project]
name = "rag-medibot"
version = "0.1.0"
description = "Role-aware medical RAG chatbot for MediAssist Hospital — hybrid vector search (dense + BM25), SQL RAG for structured claims data, and collection-level access control enforced at the Qdrant retrieval layer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.103.0",
    "docling-hierarchical-pdf>=0.1.8",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.10",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
